--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-  margin: 0;
+  margin: 20px;
   font-family: sans-serif;
 }
 
@@ -31,12 +31,20 @@
   margin: 30px;
   float: left;
 }
+.cards {
+  padding: 20px 50px;
+  border: 2px solid #42a7f5;
+  border-radius: 8px;
+}
 h1 {
-  padding: 50px;
+  padding: 30px 0;
+  margin: 40px;
 }
 ul {
   list-style: none;
   font-size: 28px;
+  margin: 0;
+  padding: 0;
 }
 a {
   text-decoration: none;
