--- a/Website 1/style.css
+++ b/Website 1/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap");
+
 * {
   box-sizing: border-box;
 }
@@ -7,9 +9,9 @@ body {
   background-color: #fff;
   font-family: "Montserrat", sans-serif;
 }
-:root {
+/* :root {
   --blue: blue;
-}
+} */
 h1,
 h2,
 h3,
