--- a/grid website/style.css
+++ b/grid website/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap");
+
 * {
   box-sizing: border-box;
 }
@@ -5,8 +7,8 @@ body {
   margin: 0;
   color: #000;
   background-color: #fff;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 1.125rem;
+  font-family: Montserrat, sans-serif;
+  font-size: 1rem;
 }
 body div {
   padding: 1.25rem;
@@ -62,39 +64,18 @@ header {
 }
 .grid-wrapper {
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: auto;
   align-items: center;
 }
-/* .grid-wrapper p {
-  background-color: lightskyblue;
-} */
-.grid-wrapper p {
-  /* grid-column: 1 / 7; */
-}
-nav {
-  display: flex;
-}
-.nav ul {
-  justify-content: flex-end;
-  margin-left: auto;
-}
-.flex-wrap ul li {
-  float: left;
-  padding: 1em;
 
+.grid-nav ul {
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: max-content;
+  justify-content: end;
   gap: 20px;
 }
-/* .flex-wrap {
-  display: flex;
-  flex-wrap: wrap;
-}
-.flex-wrap ul {
 
-  gap: 20px;
-  margin: 0;
-  padding: 0;
-  align-items: center;
-} */
 #banner {
   padding-block: 140px;
   background-color: lightskyblue;
@@ -113,11 +94,16 @@ nav {
   margin: auto;
 }
 .float {
-  grid-column: 1 / -1;
-  /* text-align: center; */
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: auto;
+  justify-content: center;
+  /* text-align: center; why doesn't this work? */
+  gap: 20px;
 }
-.float ul li {
-  float: left;
+.float li {
+  margin: auto;
+  /* but this does? */
 }
 #services {
   padding-block: 70px 100px;
@@ -144,4 +130,22 @@ nav {
 #services h2 {
   grid-column: 1 / -1;
   text-align: center;
+}
+footer {
+  padding: 1rem 2rem;
+  background-color: lightgray;
+  display: grid;
+  grid-auto-flow: column;
+  text-align: center;
+}
+footer p {
+  font-weight: 700;
+  justify-self: start;
+  margin-block: auto;
+}
+footer ul {
+  display: grid;
+  grid-auto-flow: column;
+  justify-content: end;
+  gap: 20px;
 }
