--- a/Website 1/style.css
+++ b/Website 1/style.css
@@ -47,6 +47,10 @@ button {
   font-size: inherit;
   font-family: inherit;
 }
+button:hover {
+  background-color: magenta;
+  border: 3px solid magenta;
+}
 .title {
   font-weight: bold;
   font-size: 28px;
